Update dependencies to other modules of the project to use ${project.version} as version

--- a/uce.portal/uce.corpus-importer/pom.xml
+++ b/uce.portal/uce.corpus-importer/pom.xml
@@ -77,7 +77,7 @@
         <dependency>
             <groupId>org.texttechnologylab</groupId>
             <artifactId>uce.common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
         </dependency>
 
         <!-- Global reference -->
