--- a/uce.portal/uce.search/pom.xml
+++ b/uce.portal/uce.search/pom.xml
@@ -52,7 +52,7 @@
         <dependency>
             <groupId>org.texttechnologylab</groupId>
             <artifactId>uce.common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
 
