--- a/uce.portal/uce.web/pom.xml
+++ b/uce.portal/uce.web/pom.xml
@@ -59,19 +59,19 @@
         <dependency>
             <groupId>org.texttechnologylab</groupId>
             <artifactId>uce.common</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.texttechnologylab</groupId>
             <artifactId>uce.corpus-importer</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.texttechnologylab</groupId>
             <artifactId>uce.search</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
 
