Refactor groupId in pom.xml to use ${project.groupId} for consistency

--- a/uce.portal/uce.corpus-importer/pom.xml
+++ b/uce.portal/uce.corpus-importer/pom.xml
@@ -75,7 +75,7 @@
 
         <!-- local projects-->
         <dependency>
-            <groupId>org.texttechnologylab</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>uce.common</artifactId>
             <version>${project.version}</version>
         </dependency>
