--- a/uce.portal/uce.web/pom.xml
+++ b/uce.portal/uce.web/pom.xml
@@ -57,19 +57,19 @@
         </dependency>
 
         <dependency>
-            <groupId>org.texttechnologylab</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>uce.common</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.texttechnologylab</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>uce.corpus-importer</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.texttechnologylab</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>uce.search</artifactId>
             <version>${project.version}</version>
             <scope>compile</scope>
