--- a/uce.portal/uce.web/pom.xml
+++ b/uce.portal/uce.web/pom.xml
@@ -86,9 +86,9 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
-            <groupId>org.texttechnologylab</groupId>
+            <groupId>${project.groupId}</groupId>
             <artifactId>uce.analysis</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>${project.version}</version>
             <scope>compile</scope>
         </dependency>
 
